# ComputerGraphicHW

./: .gitignore  README.md
hw1/: CMakeLists.txt  main.cpp  Лабораторная работа №1.docx
hw2/: CMakeLists.txt  GammaCorrection.cpp  GammaCorrection.h  Line.cpp  Line.h  Picture.cpp  Picture.h  Pixel.cpp  Pixel.h  Rectangle.cpp  Rectangle.h  main.cpp  Лабораторная работа №2.docx
hw3/: CMakeLists.txt  Dither.cpp  Dither.h  GammaCorrection.cpp  GammaCorrection.h  Picture.cpp  Picture.h  main.cpp  ~$бораторная работа №3.docx  Лабораторная работа №3.docx
